Kubernetes/ptincatering/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.ptincatering-test.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitor-grafana
            port:
              number: 80
